force-app/main/default/objects/SSPDCFilterMapping__mdt/SSPDCFilterMapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping to hold respective WHERE Clause mappings for building SSP-DC Requests.
Use variable names: sApplicationId for application Id and setMemberIds for member ids</description>
    <label>SSPDC Filter Mapping</label>
    <pluralLabel>SSPDC Filter Mappings</pluralLabel>
</CustomObject>