force-app/main/default/objects/SSPDCFilterMapping__mdt/fields/RAC_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>RAC_Where_Clause__c</fullName>
    <label>RAC Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>