force-app/main/default/objects/SSPDCFilterMapping__mdt/fields/SObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SObjectAPIName__c</fullName>
    <description>Holds the SObjectAPIName</description>
    <label>SObject API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>