force-app/main/default/objects/SSPDCFilterMapping__mdt/fields/WhereClause__c.field-meta.xml
<CustomField>
    <fullName>WhereClause__c</fullName>
    <description>Holds the Where Clause for the respective SObject</description>
    <label>Where Clause</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>